# mazer-rust

./: .rustfmt.toml  Cargo.toml  README.md  clippy.toml  justfile  rust-toolchain.toml
src/: cli.rs  logging.rs  main.rs
src/search/: algorithms.rs
