[package]
name = "mazer_rust"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.52", features = ["derive", "unicode"] }
time = { version = "0.3.44", features = ["macros", "local-offset"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "time"] }
